Add NOT_SUPPORTED state, removed obsolete code and /status endpoint
