# docs/hydro-root-cause-openapi.yaml
@@ -26,43 +26,11 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /status:
-    get:
-      summary: List all statuses of methods available for this model version and request id
-      operationId: listStatuses
-      parameters:
-        - name: model_version_id
-          in: query
-          description: Model Version ID
-          required: true
-          schema:
-            type: integer
-        - name: explained_request_id
-          in: query
-          description: Request ID
-          required: True
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: An array of statuses, one status for each method
-          content:
-            application/json:    
-              schema:
-                anyOf:
-                  - $ref: "#/components/schemas/AnchorResponse"
-                  - $ref: "#/components/schemas/RiseResponse"
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
   /task_status:
     get:
       summary: Get status of a task in Celery queue
       operationId: getTaskStatus
-      parameters: 
+      parameters:
         - name: task_id
           in: query
           required: True
@@ -80,42 +48,17 @@ paths:
                   - $ref: '#/components/schemas/TaskStateStarted'
                   - $ref: '#/components/schemas/TaskStateSuccess'
                   - $ref: '#/components/schemas/TaskStateFailed'
-
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"     
-  /supported_methods:
-    get:
-      summary: Get all supported interpretability methods for a model version
-      operationId: getSupportedMethods
-      parameters: 
-        - name: model_version_id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: A supported method string ID
-          content:
-            application/json:
-              schema:
-                type: string
-                enum: [anchor, rise]
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"          
+                $ref: "#/components/schemas/Error"
   /explanation:
     get:
       summary: Get calculated explanation
       operationId: getExplanation
-      parameters: 
+      parameters:
         - name: model_version_id
           in: query
           description: Model Version ID
@@ -138,13 +81,13 @@ paths:
         '200':
           description: An explanation status
           content:
-            application/json:    
+            application/json:
               schema:
                 type: object
                 properties:
                   state:
                     type: string
-                    enum: [NOT_CALLED, PENDING, STARTED, SUCCESS, FAILED]
+                    enum: [NOT_CALLED, NOT_SUPPORTED, PENDING, STARTED, SUCCESS, FAILED]
                   description:
                     type: string
                   result:
@@ -184,7 +127,7 @@ paths:
   /config:
     get:
       summary: List of parameters specified for a model version
-      parameters: 
+      parameters:
         - name: method
           in: query
           schema:
@@ -208,14 +151,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"  
+                $ref: "#/components/schemas/Error"
     put:
-      summary: Set a set of parameters to the interpretability method for a model version 
+      summary: Set a set of parameters to the interpretability method for a model version
       requestBody:
         required: true
         content:
           application/json:
-            schema:   
+            schema:
               oneOf:
                 - $ref: '#/components/schemas/RiseConfig'
                 - $ref: '#/components/schemas/AnchorConfig'
@@ -227,7 +170,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"  
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     RootCauseRequest:
@@ -263,27 +206,27 @@ components:
         preidcates:
           description: List of predicates united by AND will be make up an explanation
           type: array
-          items: 
+          items:
             type: string
     RiseResponse:
-          type: array
-          items:
-            type: object
-            required: 
-              - mask
-              - class
-              - probability
-            properties:
-              mask:
-                description: A single-channel flattened saliency map
-                type: integer
-                format: uint8
-              class:
-                description: A class for which saliency map is calculated
-                type: integer
-              probability:
-                description: A probability of image predicted as this class
-                type: number
+      type: array
+      items:
+        type: object
+        required:
+          - mask
+          - class
+          - probability
+        properties:
+          mask:
+            description: A single-channel flattened saliency map
+            type: integer
+            format: uint8
+          class:
+            description: A class for which saliency map is calculated
+            type: integer
+          probability:
+            description: A probability of image predicted as this class
+            type: number
     RiseConfig:
       type: object
       properties:
@@ -306,7 +249,7 @@ components:
           exclusiveMaximum: True
           minimum: 0
           maximum: 1
-        output_explained_tensor_name:
+        explained_output_field_name:
           description: Name of the tensor from model signature which will be used as an explained target during explanation calculation process. Tensor should represent probabilities per each class and is required to be float in range [0; 1] and to be of shape (-1, number_of_classes).
           type: string
           default: 'probabilities'
@@ -362,23 +305,23 @@ components:
           minimum: 0
           maximum: 1
           default: 0.25
-        output_explained_tensor_name:
+        explained_output_field_name:
           description: Name of the tensor from model signature which will be used as an explanation target during explanation calculation process. Tensor should represent predicted class or class id is required to be integer of shape (-1, 1).
           type: string
           default: 'classes'
     TaskStatePending:
       type: object
-      required: 
+      required:
         - state
         - task_id
       properties:
         state:
           type: string
           enum:
-            - PENDING 
+            - PENDING
     TaskStateSuccess:
       type: object
-      required: 
+      required:
         - state
         - task_id
         - result_uri
@@ -386,12 +329,12 @@ components:
         state:
           type: string
           enum:
-            - SUCCESS 
+            - SUCCESS
         result_uri:
           type: string
     TaskStateStarted:
       type: object
-      required: 
+      required:
         - state
         - task_id
         - progress
@@ -399,14 +342,14 @@ components:
         state:
           type: string
           enum:
-            - STARTED 
+            - STARTED
         progress:
           type: number
           minimum: 0
           maximum: 1
     TaskStateFailed:
       type: object
-      required: 
+      required:
         - state
         - task_id
         - description
@@ -414,7 +357,7 @@ components:
         state:
           type: string
           enum:
-            - FAILED 
+            - FAILED
         description:
           type: string
     BuildInfo:
